--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
@@ -23,6 +24,7 @@
     "@types/mocha": "^8.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "5.1.7",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "autoprefixer": "10.2.4",
