--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "@askaway/client",
   "version": "1.0.0",
   "scripts": {
     "start": "NODE_ENV=development snowpack dev",
@@ -9,10 +9,14 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@askaway/common": "*",
+    "@hookform/resolvers": "1.3.4",
     "axios": "0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "5.2.0"
+    "react-hook-form": "6.15.1",
+    "react-router-dom": "5.2.0",
+    "yup": "0.32.9"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
