--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "@askaway/common": "*",
     "@hookform/resolvers": "1.3.4",
     "axios": "0.21.1",
+    "date-fns": "2.17.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "6.15.1",
